<resources>
    <string name="app_name">androidFirst</string>
    <string name="app_btn1">클릭하기</string>
    <string name="app_btn2">보이지않기</string>
    <string name="app_btn3">사라지기</string>
    <string name="app_ellips">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pulvinar augue quis quam tempor, ac mollis risus dapibus. Pellentesque pulvinar.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pulvinar augue quis quam tempor, ac mollis risus dapibus. Pellentesque pulvinar</string>
    <string name="app_message1">회원님의 소중한 정보 보호를 위해 카카오계정의  현재 비밀번호를  확인해 주세요</string>
    <string name="app_message2">비밀번호가 기억나지 않으세요?</string>
    <string name="app_message3">비밀번호</string>
    <string name="app_btnok">확인</string>
    <string name="btn_start">START</string>
    <string name="btn_stop">STOP</string>
    <string name="btn_reset">RESET</string>
    <string name="btn_back">Click in 3 seconds and you will be out</string>
    <string name="txt_status">상태메시지</string>
</resources>