<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#979595"
    android:orientation="vertical"
    android:padding="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#8CDDBA">
        <Button
            android:id="@+id/btnClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_btn1"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnTarget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_btn2"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BUTTON3"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#D68AE3">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BUTTON4"
            android:layout_weight="1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BUTTON5"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:visibility="invisible"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BUTTON6"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#909CEA">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BUTTON7"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnGone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_btn3"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:visibility="gone"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BUTTON9"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="email|phone|web"
        android:text="네이버 http//www.naver.com 전화 +82-01029714007
        이메일 dlwjdgh@nate.com 로 방문함."
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="email|phone|web"
        android:text= "@string/app_ellips"
        android:singleLine="true"
        android:ellipsize="middle"/>


</LinearLayout>