<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity5">
    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="100dp"/>
    <ImageView
        android:id="@+id/ivGradation"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@android:drawable/alert_dark_frame"
        android:layout_below="@id/chronometer"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/tvMessage"
        style="@style/MyTextStyleSub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivGradation"
        android:layout_margin="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="button status"
        android:fontFamily="@font/pacifico"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp">
        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_start"
            android:background="@drawable/round_button"
            android:textStyle="bold"
            android:textSize="@dimen/txt_medium"
            android:textColor="@color/button_color"/>
        <Button
            android:id="@+id/btnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/btn_stop"
            android:background="@drawable/round_button"
            android:textStyle="bold"
            android:textSize="@dimen/txt_medium"
            android:enabled="false"
            android:textColor="#FFFFFF"/>
        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/btn_reset"
            android:background="@drawable/round_button"
            android:textStyle="bold"
            android:textSize="@dimen/txt_medium"
            android:enabled="false"
            android:textColor="#FFFFFF"/>
    </LinearLayout>

</RelativeLayout>